@@ -1,16 +1,0 @@
-{% extends "base.html" %}
-
-{% block content %}
-    <h2>Vote Counts for {{ contest }}</h2>
-<table border cellpadding=5>
-<tbody>
-        {% for votecount in votecounts_list %}
-<tr>
- <td>{{ votecount.votes }}</td>
- <td>{{ votecount.choice }}</td>
- <td>{{ votecount.batch }}</td>
-</tr>
-        {% endfor %}
-</tbody>
-</table>
-{% endblock %}
